# pytest-from-zero-to-confidence

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  app.py  cache.py  remote.py
tests/: conftest.py
tests/integration/: test_todo_flow.py
