[project]
name = "todo-demo-pytest"
version = "0.1.0"
description = "Демо-проект списка задач для курса по pytest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
